--- a/package.json
+++ b/package.json
@@ -1,48 +1,31 @@
 {
   "name": "my-recipe",
-  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.2",
-    "@testing-library/user-event": "^13.5.0",
-    "antd": "^6.2.2",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "react-hook-form": "^7.71.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "1.0.0",
+  "workspaces": [
+    "apps/*"
+  ],
+  "description": "",
+  "main": "index.js",
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "^18.19.130",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
-    "typescript": "^4.9.5"
+    "concurrently": "^9.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:frontend": "npm run start --workspace=frontend",
+    "dev:backend": "npm run start --workspace=backend",
+    "dev": "concurrently \"npm run dev:frontend\""
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TyrangYang/recipe-manager.git"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/TyrangYang/recipe-manager/issues"
+  },
+  "homepage": "https://github.com/TyrangYang/recipe-manager#readme"
 }
